objects/SCP_Communities_headerlinks__c.object
<CustomObject>
    <fields>
        <fullName>Leads_Tab__c</fullName>
        <defaultValue>"SCP_communities_leadFilter_Clone"</defaultValue>
        <label>Leads_Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QRG__c</fullName>
        <label>Quick Reference Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <description>Field used to hold support URL</description>
        <label>Support</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Target_Prospects_Tab__c</fullName>
        <defaultValue>"SCP_Communities_targetProspectFilter"</defaultValue>
        <label>Target_Prospects_Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <description>Field used to hold the training URL</description>
        <label>Training</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>community_prefix__c</fullName>
        <description>Contains the Community prefix</description>
        <label>community_prefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting used to hold the links for Training and Support on SCP communities header</description>
    <label>SCP_Communities_headerlinks</label>
</CustomObject>